--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -59,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="@string/login_failed"
+            android:text="@string/error_email_password"
             android:textAlignment="center"
             android:textColor="@color/red"
             android:textStyle="bold"
