--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,11 +35,12 @@
         android:id="@+id/tvUsernameError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="4dp"
-        android:text="@string/email"
+        android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
@@ -47,11 +48,12 @@
         android:id="@+id/tvPasswordError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="4dp"
-        android:text="@string/email"
+        android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
@@ -59,11 +61,12 @@
         android:id="@+id/tvEmailError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="4dp"
-        android:text="@string/email"
+        android:textColor="@color/error_red"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="normal"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
