--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -86,7 +86,7 @@
         android:id="@+id/imageView2"
         android:layout_width="159dp"
         android:layout_height="162dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/empty_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:background="@drawable/btn_shape_round"
+        android:enabled="false"
         android:text="@string/create_user"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
