--- a/app/src/main/res/layout/fragment_consolidate.xml
+++ b/app/src/main/res/layout/fragment_consolidate.xml
@@ -26,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/tvRestantTime"
             tools:ignore="TextSizeCheck" />
 
         <ImageView
@@ -123,7 +123,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btnCancel" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvRestantTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="53dp"
