--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.statistics.view.StatisticsFragment"
+    tools:context=".presentation.statistics.view.ActivityStatistics"
     android:background="@color/background_green">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
-        android:name="com.dds.theecogame.fragment_statistics_1"
+        android:name="com.dds.theecogame.presentation.statistics.view.Statistics1Fragment"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
