--- a/app/src/main/res/layout/activity_participant_profile.xml
+++ b/app/src/main/res/layout/activity_participant_profile.xml
@@ -5,12 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:defaultFocusHighlightEnabled="true"
-    tools:context=".fragment_participant_profile">
+    tools:context=".ActivityParticipantProfile">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_green">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/background_green"
+            android:contentDescription="@string/back"
+            android:onClick="goToMainScreen"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_revert"
+            app:tint="@color/black"
+            tools:ignore="ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/ivProfile"
@@ -32,7 +47,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="140dp"
             android:background="@drawable/btn_shape_round"
-            android:text="@string/edit_profile"
+            android:text="@string/edit_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivProfile"
@@ -58,6 +73,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:hint="@string/username_profile"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +108,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -126,6 +143,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:hint="@string/password_profile"
             android:inputType="textPassword"
             android:minHeight="48dp"
             app:layout_constraintStart_toStartOf="parent"
