--- a/app/src/main/res/layout/fragment_statistics_1.xml
+++ b/app/src/main/res/layout/fragment_statistics_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_statistics_1">
+    tools:context=".presentation.statistics.view.fragment_statistics_1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
