--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -83,12 +83,12 @@
             android:id="@+id/tvPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="283dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="75dp"
             android:text="@string/points"
             android:textColor="@color/black"
             android:textSize="@dimen/tvpoints"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />
 
         <TextView
