[UT-365] Lógica Edit Profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="grey">#C7C7C7</color>
     <color name="background_white_green">#92a88f</color>
     <color name="red">#F63521</color>
-
+    <color name="black_title">#212121</color>
     <color name="error_red">#A10000</color>
 </resources>
