--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -41,13 +41,14 @@
 
         <Button
             android:id="@+id/bnEditImage"
-            android:layout_width="151dp"
-            android:layout_height="48dp"
+            android:layout_width="204dp"
+            android:layout_height="46dp"
             android:layout_marginStart="141dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="140dp"
             android:background="@drawable/btn_shape_round"
             android:text="@string/edit_image"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivProfile"
@@ -60,7 +61,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="50dp"
             android:text="@string/username_profile"
-            android:textColor="#212121"
+            android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,14 +69,17 @@
 
         <EditText
             android:id="@+id/etUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="320dp"
+            android:layout_height="45dp"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
+            android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/username_profile"
             android:inputType="textPersonName"
             android:minHeight="48dp"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvUserame" />
 
@@ -95,7 +99,7 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             android:text="@string/email_profile"
-            android:textColor="#212121"
+            android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,14 +107,17 @@
 
         <EditText
             android:id="@+id/etEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="320dp"
+            android:layout_height="45dp"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
+            android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
@@ -127,10 +134,10 @@
             android:id="@+id/tvPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
             android:text="@string/password_profile"
-            android:textColor="#212121"
+            android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,14 +145,17 @@
 
         <EditText
             android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="320dp"
+            android:layout_height="45dp"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="@string/password_profile"
+            android:background="@drawable/btn_shape_rounded_square"
             android:inputType="textPassword"
             android:minHeight="48dp"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
@@ -164,6 +174,8 @@
             android:layout_height="48dp"
             android:layout_marginStart="128dp"
             android:layout_marginTop="20dp"
+            android:enabled="false"
+            android:textStyle="bold"
             android:background="@drawable/btn_shape_round"
             android:text="@string/save_profile"
             app:layout_constraintStart_toStartOf="parent"
