--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="48dp"
+        android:textColor="@color/black_title"
         android:text="@string/username"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
@@ -25,8 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="48dp"
+        android:textColor="@color/black_title"
         android:text="@string/email"
-        android:textSize="@dimen/settings_slider_title_font_size"
+        android:textSize="@dimen/profile"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etUsername" />
@@ -76,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="48dp"
+        android:textColor="@color/black_title"
         android:text="@string/password"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
