--- a/app/src/main/res/layout/activity_participant_profile.xml
+++ b/app/src/main/res/layout/activity_participant_profile.xml
@@ -86,7 +86,8 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etUsername" />
+            app:layout_constraintTop_toBottomOf="@+id/etUsername"
+            tools:visibility="invisible" />
 
         <TextView
             android:id="@+id/tvEmail"
@@ -121,7 +122,8 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            tools:visibility="invisible" />
 
         <TextView
             android:id="@+id/tvPassword"
@@ -156,7 +158,8 @@
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/etPassword"
+            tools:visibility="invisible" />
 
         <Button
             android:id="@+id/bnSave"
