--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -31,16 +31,17 @@
             android:id="@+id/ivProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="141dp"
             android:layout_marginTop="50dp"
             android:contentDescription="@string/profile"
+            android:src="@drawable/empty_avatar"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ImageContrastCheck"
             tools:src="@tools:sample/avatars" />
 
         <Button
-            android:id="@+id/bnEditImage"
+            android:id="@+id/btnEditImage"
             android:layout_width="204dp"
             android:layout_height="46dp"
             android:layout_marginStart="141dp"
@@ -55,17 +56,17 @@
             tools:ignore="TextSizeCheck" />
 
         <TextView
-            android:id="@+id/tvUserame"
+            android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
             android:text="@string/username_profile"
             android:textColor="@color/black_title"
             android:textSize="@dimen/profile"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bnEditImage" />
+            app:layout_constraintTop_toBottomOf="@+id/btnEditImage" />
 
         <EditText
             android:id="@+id/etUsername"
@@ -81,7 +82,7 @@
             android:paddingLeft="10dp"
             android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvUserame" />
+            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
         <TextView
             android:id="@+id/tvUsernameError"
@@ -89,6 +90,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
+            android:textColor="@color/error_red"
+            android:textSize="@dimen/settings_slider_title_font_size"
+            android:textStyle="normal"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
@@ -127,6 +132,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
+            android:textColor="@color/error_red"
+            android:textSize="@dimen/settings_slider_title_font_size"
+            android:textStyle="normal"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
@@ -165,11 +174,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
+            android:textColor="@color/error_red"
+            android:textSize="@dimen/settings_slider_title_font_size"
+            android:textStyle="normal"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
         <Button
-            android:id="@+id/bnSave"
+            android:id="@+id/btnSave"
             android:layout_width="148dp"
             android:layout_height="48dp"
             android:layout_marginStart="128dp"
