--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="background_white_green">#92a88f</color>
     <color name="red">#F63521</color>
     <color name="black_title">#212121</color>
-    <color name="error_red">#A10000</color>
+    <color name="error_red">#800101</color>
 </resources>
