[UT-365] Lógica Edit Profile + [UT-363] Lógica Registro Unificar estilo

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -75,8 +75,11 @@
             android:layout_height="53dp"
             android:layout_marginStart="80dp"
             android:layout_marginTop="55dp"
+            android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/prompt_email"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +91,11 @@
             android:layout_height="53dp"
             android:layout_marginStart="80dp"
             android:layout_marginTop="33dp"
+            android:background="@drawable/btn_shape_rounded_square"
             android:ems="10"
             android:hint="@string/prompt_password"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
             android:inputType="textPassword"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
