--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -57,7 +57,6 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/GameContainerView"
-        android:name="com.dds.theecogame.presentation.game.view.QuestionFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +74,7 @@
         app:layout_constraintBottom_toTopOf="@+id/Linea"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnMute"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
+        app:layout_constraintStart_toEndOf="@+id/btnClues"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_title_question" />
 
