--- a/app/src/main/res/layout/fragment_hangman.xml
+++ b/app/src/main/res/layout/fragment_hangman.xml
@@ -182,6 +182,7 @@
             android:layout_marginStart="205dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="206dp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivBackground" />
