Interfaz del nivel de ods + la lógica, sólo queda conectarlo con la base de datos

--- a/app/src/main/res/layout/fragment_statistics_2.xml
+++ b/app/src/main/res/layout/fragment_statistics_2.xml
@@ -98,21 +98,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/numAhorcadosAcertadas" />
 
-        <TextView
-            android:id="@+id/nivelConocimientoODS"
-            android:layout_width="@dimen/estadisticas_datos_width"
-            android:layout_height="@dimen/estadisticas_datos_height"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/btn_shape_round"
-            android:fontFamily="@font/varela_round"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/ODS_knowledge"
-            android:textColor="@color/black"
-            android:textSize="@dimen/estadisticas_datos"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/numAhorcadosIncorrectas" />
-
         <ImageView
             android:id="@+id/ivLeft"
             android:layout_width="60dp"
@@ -138,11 +123,11 @@
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/ivRight2"
+            app:layout_constraintEnd_toStartOf="@+id/ivRight"
             app:layout_constraintStart_toEndOf="@+id/ivLeft" />
 
         <ImageView
-            android:id="@+id/ivRight2"
+            android:id="@+id/ivRight"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="46dp"
@@ -152,7 +137,6 @@
             android:src="?attr/actionModeCloseDrawable"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/grey"
             tools:ignore="ImageContrastCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
