--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -26,7 +26,7 @@
         android:id="@+id/tvRanking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="64dp"
         android:text="@string/ranking"
         android:textColor="@color/white"
         android:textSize="@dimen/title_font_size"
@@ -60,7 +60,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="0" />
+                android:text="0"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/ivUserAvatar"
