--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="48sp"
@@ -89,9 +89,10 @@
         android:id="@+id/tvVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/app_name"
+        android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="TextContrastCheck" />
@@ -99,7 +100,7 @@
     <ImageButton
         android:id="@+id/btnLogout"
         android:layout_width="75dp"
-        android:layout_height="78dp"
+        android:layout_height="75dp"
         android:background="@color/background_green"
         android:contentDescription="@string/logout"
         app:layout_constraintBottom_toTopOf="@+id/tvVersion"
@@ -108,13 +109,13 @@
 
     <ImageButton
         android:id="@+id/btnRanking"
-        android:layout_width="75dp"
-        android:layout_height="78dp"
-        android:background="@color/background_green"
+        android:layout_width="68dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/ranking_ic"
         android:contentDescription="@string/ranking"
-        android:layout_marginBottom="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
