--- a/app/src/main/res/layout/fragment_statistics_3.xml
+++ b/app/src/main/res/layout/fragment_statistics_3.xml
@@ -1043,6 +1043,7 @@
             android:contentDescription="@string/right"
             android:rotation="180"
             android:src="?attr/actionModeCloseDrawable"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:tint="@color/grey"
