--- a/app/src/main/res/layout/fragment_hangman.xml
+++ b/app/src/main/res/layout/fragment_hangman.xml
@@ -181,7 +181,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="205dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="206dp"
+            android:layout_marginEnd="205dp"
+            android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
