--- a/app/src/main/res/layout/fragment_hangman.xml
+++ b/app/src/main/res/layout/fragment_hangman.xml
@@ -190,36 +190,30 @@
         <TextView
             android:id="@+id/tvHangmanWord"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="205dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="205dp"
-            android:layout_marginBottom="300dp"
+            android:layout_marginBottom="80dp"
             android:textAlignment="center"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivBackground" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="com.dds.theecogame.presentation.game.view.KeyboardFragment"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/background_green"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="143dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvHangmanWord">
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView"
-                android:name="com.dds.theecogame.presentation.game.view.KeyboardFragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout="@layout/fragment_keyboard" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toBottomOf="@+id/ivBackground"
+            tools:layout="@layout/fragment_keyboard" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
